# mambafold

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: AGENTS.md  README.md  finetune_1024.yaml  finetune_2048.yaml  finetune_512.yaml  overfit.yaml  overfit_6000ada.yaml  overfit_base.yaml  overfit_plm.yaml  overfit_test.yaml  pretrain_256.yaml  train_base.yaml
data/: rcsb
data/splits/: train_valid.txt
docs/: IMPLEMENTATION_PLAN.md  README.md  architecture.md  data_pipeline.md  inference.md  simplefold.txt  training.md
docs/papers/: OVERVIEW.md  equilibrium_matching_summary.md  mamba3_summary.md  simplefold_summary.md
notebooks/: AGENTS.md  viz3d.ipynb
scripts/: AGENTS.md  README.md  export_inference.py  infer_2025.py  infer_seq.py  infer_train.py  install_mamba_ssm.sh  make_val_split.py  overfit.py  overfit_test.py  pdb_to_npz.py  precompute_esm.py  train.py  viz_compare.py  viz_overfit.py  viz_sampler.py
scripts/slurm/: AGENTS.md  infer_2025.sh  infer_train.sh  install_cuda_deps.sh  overfit.sh  overfit_test.sh  precompute_esm.sh  submit_overfit.sh  train.sh  train_6000ada.sh  train_h100.sh  verify_model.sh
src/: README.md
src/mambafold/: AGENTS.md
src/mambafold/data/: AGENTS.md  collate.py  constants.py  dataset.py  esm.py  loader.py  transforms.py  types.py
src/mambafold/losses/: AGENTS.md  eqm.py  lddt.py
src/mambafold/model/: AGENTS.md  atom_decoder.py  bimamba3.py  blocks.py  embeddings.py  grouping.py  mambafold.py
src/mambafold/sampling/: AGENTS.md  __init__.py  sampler.py
tests/: README.md  test_mamba3.py
(+12 files in other folders)
