[project]
name = "mambafold"
version = "0.1.0"
description = "Mamba-based single-chain protein structure prediction with Equilibrium Matching"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.4",
    "einops>=0.8",
    "pyyaml>=6.0",
    "wandb>=0.18",
    "biopython>=1.84",
    "numpy>=1.26",
    "scipy>=1.13",
    "esm>=3.2.3",
    "causal-conv1d>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mambafold"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
find-links = ["https://download.pytorch.org/whl/cu128"]
